fmm-c/src/snapshots/fmm_c__tests__type_definitions__compile_union_type_definition.snap
---
source: fmm-c/src/lib.rs
expression: "compile(&Module::new(vec![VariableDeclaration ::\n                          new(\"x\", types :: Union ::\n                              new(vec !\n                                  [types :: Primitive :: PointerInteger .\n                                   into()]))], vec![], vec![], vec![]))"
---
#include <stdatomic.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
union u_74978b4758aa9d35 {size_t m0;};
extern union u_74978b4758aa9d35 x;
